--- a/client/src/components/RecipeCard/RecipeCard.module.css
+++ b/client/src/components/RecipeCard/RecipeCard.module.css
@@ -16,13 +16,13 @@
     box-sizing: border-box;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-    min-height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-  
+    flex-grow: 1;
+  }
+
 .cardContent {
     margin-bottom: 10px;
     display: flex;
@@ -37,4 +37,10 @@
     object-fit: cover;
     border-radius: 5px;
     margin-bottom: 10px;
+}
+
+.icon {
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
 }
