--- a/client/src/components/RecipesContainer/RecipesContainer.module.css
+++ b/client/src/components/RecipesContainer/RecipesContainer.module.css
@@ -1,36 +1,46 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 960px;
-    margin: 0 auto;
-  }
-  
-  .card {
-    width: calc(33.33% - 10px);
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-    padding: 20px;
-    box-sizing: border-box;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-  
-  .link{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 960px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0 10px;
 }
 
-  @media (max-width: 767px) {
-    .card {
-      width: calc(50% - 10px);
-    }
+.cardContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  flex-basis: calc(33.33% - 20px);
+  height: 200px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.link {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+@media (max-width: 767px) {
+  .card {
+    flex-basis: calc(50% - 20px);
   }
-  
-  @media (max-width: 480px) {
-    .card {
-      width: 100%;
-    }
+}
+
+@media (max-width: 480px) {
+  .card {
+    flex-basis: 100%;
   }
+}
