--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -1,62 +1,91 @@
 .containerHome {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 60px;
-  }
-  
-  .section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-  
-  .filtersOrders {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .clearAll {
-    margin-top: 10px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-  
-  .cardContainer {
-    margin-top: 20px;
-  }
-  
-  @media (max-width: 770px) {
-    .containerHome {
-      margin-top: 0;
-    }
-  }
-
-  .separator {
-    margin: 0 80px;
-  }
-
-.link{
-    background-color: #24242d;
-    border: none;
-    border-radius: 3px ;
-    padding: 5px 10px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 25px;
-    width: 150px;
-    margin: 2px;
-    color: white;
-    transition: background-color 0.3s;
-    text-decoration: none;
-    font-size: 14px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
 }
 
-.link:hover{
-    background-color: rgba(0, 0, 0, 0.708);
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.filtersOrders {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.clearAll {
+  margin-top: 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.separator {
+  margin: 0 40px;
+}
+
+.link {
+  background-color: #24242d;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 25px;
+  width: 150px;
+  margin: 2px;
+  color: white;
+  transition: background-color 0.3s;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.link:hover {
+  background-color: rgba(0, 0, 0, 0.708);
+}
+
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.card {
+  width: 300px;
+  height: 200px; /* Set a fixed height for the cards */
+  margin: 10px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+@media (max-width: 767px) {
+  .cardContainer {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+  .card {
+    width: calc(50% - 20px);
+  }
+}
+
+@media (max-width: 480px) {
+  .cardContainer {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+  .card {
+    width: 100%;
+  }
 }
