--- a/client/src/components/RecipeCard/RecipeCard.module.css
+++ b/client/src/components/RecipeCard/RecipeCard.module.css
@@ -1,38 +1,28 @@
-/* .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-} */
-
-/* .card {
-  flex-basis: calc(25% - 20px);
+.card {
+  /* flex-basis: calc(25% - 20px); */
   margin: 10px;
   background-color: #f5f5f5;
   border-radius: 5px;
   padding: 20px;
   box-sizing: border-box;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
+  /* min-height: 300px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  flex-grow: 1;
-} */
+}
 
-/* .cardContent {
+.cardContent {
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-} */
+}
 
-/* .cardImage {
-  width: 100%;
+.cardImage {
+  width: 75%;
   height: 200px;
   object-fit: cover;
   border-radius: 5px;
@@ -43,4 +33,4 @@
   height: 40px;
   width: 40px;
   margin-right: 10px;
-} */
+}
