--- a/client/src/components/RecipesContainer/RecipesContainer.module.css
+++ b/client/src/components/RecipesContainer/RecipesContainer.module.css
@@ -4,20 +4,10 @@
   justify-content: space-between;
   max-width: 960px;
   margin: 0 auto;
-  box-sizing: border-box;
-  padding: 0 10px;
-}
-
-.cardContainer {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .card {
-  flex-basis: calc(33.33% - 20px);
-  height: 200px;
+  width: calc(33.33% - 10px);
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border-radius: 5px;
@@ -33,14 +23,14 @@
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 480px) {
   .card {
-    flex-basis: calc(50% - 20px);
+    width: 100%;
   }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 481px) and (max-width: 767px) {
   .card {
-    flex-basis: 100%;
+    width: calc(50% - 10px);
   }
 }
