--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -1,7 +1,7 @@
 .containerHome {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   margin-top: 60px;
 }
 
@@ -52,15 +52,15 @@
 }
 
 .cardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
   margin-top: 20px;
 }
 
 .card {
   width: 300px;
-  height: 200px; /* Set a fixed height for the cards */
+  height: 200px;
   margin: 10px;
   background-color: #f5f5f5;
   border-radius: 5px;
