--- a/client/src/components/Filters/Filters.module.css
+++ b/client/src/components/Filters/Filters.module.css
@@ -9,7 +9,7 @@
 .title {
   font-weight: 800;
   margin-bottom: 1px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 18px;
   text-decoration-line: underline;
 }
@@ -19,7 +19,7 @@
   flex-direction: row;
   align-items: center;
   margin-top: 1px;
-  justify-content: center; 
+  justify-content: center;
 }
 
 .select {
@@ -31,7 +31,7 @@
   margin: 5px;
   font-size: 14px;
   width: 150px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: 500;
   outline: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
