--- a/client/src/components/Orders/Orders.module.css
+++ b/client/src/components/Orders/Orders.module.css
@@ -27,7 +27,7 @@
   margin: 10px;
   font-size: 16px;
   width: 200px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: 500;
   outline: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
