--- a/client/src/views/CreateForm/CreateForm.module.css
+++ b/client/src/views/CreateForm/CreateForm.module.css
@@ -14,21 +14,21 @@
 .formLabel {
   font-weight: bold;
   text-decoration: underline;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .formTitle {
-    font-weight: bold;
-    font-size: 35px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
+  font-weight: bold;
+  font-size: 35px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 
 .formInput {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
   border-radius: 8px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin-top: 10px;
 }
 
@@ -38,7 +38,7 @@
   padding: 8px;
   margin-bottom: 10px;
   border-radius: 8px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin-top: 10px;
 }
 
@@ -55,7 +55,7 @@
 
 .formCheckboxContainer label {
   flex-basis: 45%;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .formCheckboxContainer input[type="checkbox"] {
@@ -77,7 +77,7 @@
   border: none;
   cursor: pointer;
   font-size: 18px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   border-radius: 8px;
 }
 
